<resources>
    <string name="app_name">Qualitory Pie</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Qualitory Pie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Qualitory Pie</string>
    <string name="nav_header_subtitle">qualitorypie.com</string>
    <string name="nav_header_desc">Qualitory Menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_borrow_list">Borrow List</string>
    <string name="title_activity_product_list">Product List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_product_form">Product Form</string>
    <string name="whole_sale_price">Whole Sale Price</string>
    <string name="retail_price">Retail Price</string>
    <string name="product_remarks">Remarks</string>
    <string name="product_save">Save</string>
    <string name="product_name_required">Product Name can not be empty</string>
    <string name="product_whole_sale_price_required">Wholesale can not be empty</string>
    <string name="retail_price_required">Retail can not be empty</string>


    <string name="product_name">Product Name</string>
    <string name="person_name">Person Name</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>

    <string name="person_name_required">Person Name can not be empty</string>
    <string name="phone_no_required">Phone No can not be empty</string>
    <string name="address_required">Address field can not be empty</string>
    <string name="amount">Amount</string>
    <string name="select_product">Select Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_required">Product field can not empty</string>
    <string name="amount_required">Amount can not be empty</string>
    <string name="product_list">Product List</string>
    <string name="peripheral_control_management">Peripheral Control Management</string>
    <string name="borrow_list">Borrow List</string>
    <string name="pepheral_name">Peripheral Name</string>
    <string name="peripheral_name_hint">Type Peripheral Name</string>
    <string name="pepheral_desc">Peripheral Description</string>
    <string name="peripheral_desc_hint">Peripheral Description</string>


</resources>
