<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/product_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/product_list" />
        <item
            android:id="@+id/borrow_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/borrow_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/peripheral_control_management" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
