<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProductFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/product_name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/input_whole_sale_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/whole_sale_price"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/input_retail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/retail_price"
                />
        </android.support.design.widget.TextInputLayout>
        <EditText
            android:id="@+id/input_remarks"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@null"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="6"
            android:scrollHorizontally="false"
            android:hint="@string/product_remarks"
            />
        <Button
            android:id="@+id/product_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorThemeSucces"
            android:textColor="@color/textColorWhite"
            android:textStyle="bold"
            android:text="@string/product_save"/>
    </LinearLayout>


</FrameLayout>