<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PeripheralControlActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:text="@string/pepheral_name"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/formPeripheralName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/peripheral_name_hint"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/pepheral_desc"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/formPeripheralDesc"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@null"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="3"
            android:scrollHorizontally="false"
            />
        <Button
            android:id="@+id/peripheral_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorThemeSucces"
            android:textColor="@color/textColorWhite"
            android:textStyle="bold"
            android:text="@string/product_save"/>

    </LinearLayout>

</FrameLayout>